--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <link rel="stylesheet" href="remodal/dist/remodal.css">
     <link rel="stylesheet" href="remodal/dist/remodal-default-theme.css">
     <link rel="stylesheet" href="cssslider_files/csss_engine1/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"
 		type="text/javascript"></script>
     <script src="https://cdnjs.cloudfla	re.com/ajax/libs/angular-scroll/1.0.2/angular-scroll.min.js"
         type="text/javascript"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.js"
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.9/angular-animate.min.js"
         type="text/javascript"></script>
 
 
