--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
     <script src="js/typing.js" type="text/javascript"></script>
     <script src="remodal/dist/remodal.min.js"></script>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+	<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script>
         (function(i, s, o, g, r, a, m)
         {
