--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     <link rel="stylesheet" href="remodal/dist/remodal.css">
     <link rel="stylesheet" href="remodal/dist/remodal-default-theme.css">
     <link rel="stylesheet" href="cssslider_files/csss_engine1/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"
-		type="text/javascript"></script>
-    <script src="https://cdnjs.cloudfla	re.com/ajax/libs/angular-scroll/1.0.2/angular-scroll.min.js"
-        type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.9/angular-animate.min.js"
-        type="text/javascript"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="https://cdnjs.cloudfla	re.com/ajax/libs/angular-scroll/1.0.2/angular-scroll.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.9/angular-animate.min.js"></script>
+	<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+	 <script>
+      window.sr = ScrollReveal();
+    </script>
 
         <script>
             ! function()
@@ -259,7 +259,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <script src="js/particles.min.js" type="text/javascript"></script>
-	<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="js/projects.js" type="text/javascript"></script>
     <script src="js/main_3.0.js" type="text/javascript"></script>
     <script src="js/main_1.0.js" type="text/javascript"></script>
